--- a/lectures/index.html
+++ b/lectures/index.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<input id="input" placeholder="a">
-<input id="input" placeholder="b">
-<input id="input" placeholder="c">
+<input id="a" placeholder="a">
+<input id="b" placeholder="b">
+<input id="c" placeholder="c">
 <p></p>
 <div id="parent"></div>
 
@@ -1401,7 +1401,32 @@
     // Даны 3 инпута, кнопка и абзац. В инпуты вводятся коэффициенты квадратного уравнения.
     // По нажатию на кнопку найдите корни этого уравнения и выведите их в абзац.
     //
-
+    // var a = document.getElementById('a');
+    // var b = document.getElementById('b');
+    // var c = document.getElementById('c');
+    // var button = document.getElementById('butt');
+    // var p = document.getElementById('paragraph');
+    //
+    // button.addEventListener("click", function () {
+    //
+    //     var discr = b.value * b.value - 4 * a.value * c.value;
+    //
+    //     if (discr < 0) {
+    //         p.innerHTML = 'корней нет!' + discr;
+    //
+    //     } else if (discr == 0) {
+    //         var x = (-b.value + Math.sqrt(discr)) / 2 * a.value;
+    //         p.innerHTML = 'x = ' + x;
+    //     } else {
+    //         var bn = b.value
+    //         var x = (-b.value + Math.sqrt(discr)) / 2 * a.value;
+    //         var x2 = (-b.value - Math.sqrt(discr)) / 2 * a.value;
+    //         p.innerHTML = 'x1 = ' + x + '<br>' + 'x2 = ' + x2;
+    //
+    //
+    //     }
+    //
+    // })
 
     //     Угадай число
     // Реализуйте игру 'угадай число'. Суть: компьютер загадывает число от 1 до 100.
