--- a/lectures/index.html
+++ b/lectures/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .active {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
 <p></p>
@@ -1566,5 +1571,43 @@
     //
     //     Модифицируйте предыдущую задачу так, чтобы под таблицей выводилась сумма активированных в
     //     данный момент ячеек.
+
+    var array = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+    var parent = document.getElementById('parent');
+
+    initTable(array);
+
+    function initTable(values) {
+        var table = document.createElement("table");
+        table.border = '1px';
+        table.cellSpacing = '0px';
+        table.cellPadding = '0px';
+        for (var i = 0; i < values.length; i += 5) {
+            var tr = document.createElement("tr");
+            for (var j = i; j < i + 5; j++) {
+                addCell(values[j], tr);
+            }
+            table.appendChild(tr);
+        }
+
+        parent.appendChild(table);
+
+    }
+
+    function addCell(value, parent) {
+        var td = document.createElement("td");
+        td.innerHTML = value;
+        td.width = '50px';
+        td.addEventListener("click", function () {
+
+            if (this.className != 'active') {
+                this.className = 'active';
+            } else {
+                this.className = '';
+            }
+
+        })
+        parent.appendChild(td);
+    }
 
 </script>
