- Лекция 8 - классная работа

--- a/lectures/index.html
+++ b/lectures/index.html
@@ -1609,4 +1609,29 @@
     //     parent.appendChild(td);
     // }
 
+    // Лекция №8 по JavaScript. Классная работа
+    // Задачи
+
+    // Сделайте функцию range,
+    // которая параметрами будет принимать два целых числа и возвращать массив,
+    // заполненный целыми числами в этом промежутке. Например, range(1, 5) должно вернуть массив [1, 2, 3, 4, 5].
+    //
+    //     Сделайте функцию shuffle,
+    //     которая параметром будет принимать массив, а возвращать этот массив, в котором элементы будут
+    //     перемешаны в случайном порядке.
+    //
+    //     После того, как вы решите эту задачу, посмотрите ее разбор тут: ссылка на видео.
+    //
+    //     Сделайте функцию createTable, которая параметром будет принимать массив и создавать таблицу table,
+    //     заполненную элементами из этого массива.
+    //
+    //     С помощью функции range сделайте массив, заполненный числами от 1 до 25.
+    //     С помощью функции createTable создайте таблицу, заполненную элементами из этого массива.
+    //
+    //     Модифицируйте предыдущую задачу так, чтобы таблица заполнялась числами от 1 до 25 в случайном порядке.
+    //     Для этого, после того, как вы сделаете массив функцией range, обработайте его функцией shuffle.
+    //
+    //     Модифицируйте предыдущую задачу так, чтобы по клику на любую ячейку она активировалась - это значит
+    //     становилась красного фона.
+
 </script>
