--- a/lectures/index.html
+++ b/lectures/index.html
@@ -1628,48 +1628,48 @@
     //     которая параметром будет принимать массив, а возвращать этот массив, в котором элементы будут
     //     перемешаны в случайном порядке.
     //
-    var arr = [1, 3, 5, 6, 7];
-    var usedIndexes = [];
-  console.log(shuffle(arr));
 
-    function shuffle(arr) {
-        var newArray = [];
-
-        while (newArray.length < arr.length) {
-            var index = getRandomIndex(0, arr.length - 1);
-            if (isUsedCheck(index, usedIndexes) === false) {
-
-                newArray.push(arr[index]);
-            }
-
-          isUsedCheck(index, usedIndexes);
-        }
-
-        return newArray;
-
-    }
-
-    function getRandomIndex(min, max) {
-        var randomIndex = Math.floor(min + Math.random() * (max + 1 - min));
-        return randomIndex;
-    }
-
-    function isUsedCheck(num, indexStorage) {
-
-        var flag = false;
-
-        for (var i = 0; i < indexStorage.length; i++) {
-            if (indexStorage[i] == num) {
-                flag = true;
-            }
-        }
-        if (flag === false) {
-
-            indexStorage.push(num);
-
-        }
-        return flag;
-    }
+    // var usedIndexes = [];
+    // console.log(shuffle(arr));
+    //
+    // function shuffle(arr) {
+    //     var newArray = [];
+    //
+    //     while (newArray.length < arr.length) {
+    //         var index = getRandomIndex(0, arr.length - 1);
+    //         if (isUsedCheck(index, usedIndexes) === false) {
+    //
+    //             newArray.push(arr[index]);
+    //         }
+    //
+    //         isUsedCheck(index, usedIndexes);
+    //     }
+    //
+    //     return newArray;
+    //
+    // }
+    //
+    // function getRandomIndex(min, max) {
+    //     var randomIndex = Math.floor(min + Math.random() * (max + 1 - min));
+    //     return randomIndex;
+    // }
+    //
+    // function isUsedCheck(num, indexStorage) {
+    //
+    //     var flag = false;
+    //
+    //     for (var i = 0; i < indexStorage.length; i++) {
+    //         if (indexStorage[i] == num) {
+    //             flag = true;
+    //         }
+    //     }
+    //     if (flag === false) {
+    //
+    //         indexStorage.push(num);
+    //
+    //     }
+    //     return flag;
+    // }
 
     //     После того, как вы решите эту задачу, посмотрите ее разбор тут: ссылка на видео.
     //
@@ -1677,6 +1677,24 @@
     //     Сделайте функцию createTable, которая параметром будет принимать массив и создавать таблицу table,
     //     заполненную элементами из этого массива.
     //
+    var arr = [1, 3, 5, 6, 7];
+    createTable(arr);
+
+    function createTable(arr) {
+        var parent = document.getElementById('parent');
+        var table = document.createElement('table');
+        for (var i = 0; i < arr.length; i += 5) {
+            var tr = document.createElement("tr");
+            // for (var j = i; j < j + 5; j++) {
+            //     var td = document.createElement("td");
+            //     td.innerHTML = arr[j];
+            //     tr.appendChild(td);
+            // }
+            console.log(1);
+            table.appendChild(tr);
+        }
+        parent.appendChild(table);
+    }
 
     //     С помощью функции range сделайте массив, заполненный числами от 1 до 25.
     //     С помощью функции createTable создайте таблицу, заполненную элементами из этого массива.
