--- a/lectures/index.html
+++ b/lectures/index.html
@@ -1628,9 +1628,7 @@
     //     которая параметром будет принимать массив, а возвращать этот массив, в котором элементы будут
     //     перемешаны в случайном порядке.
     //
-
     // var usedIndexes = [];
-    // console.log(shuffle(arr));
     //
     // function shuffle(arr) {
     //     var newArray = [];
@@ -1673,29 +1671,9 @@
 
     //     После того, как вы решите эту задачу, посмотрите ее разбор тут: ссылка на видео.
     //
-
     //     Сделайте функцию createTable, которая параметром будет принимать массив и создавать таблицу table,
     //     заполненную элементами из этого массива.
     //
-    var arr = [1, 3, 5, 6, 7];
-    createTable(arr);
-
-    function createTable(arr) {
-        var parent = document.getElementById('parent');
-        var table = document.createElement('table');
-        for (var i = 0; i < arr.length; i += 5) {
-            var tr = document.createElement("tr");
-            // for (var j = i; j < j + 5; j++) {
-            //     var td = document.createElement("td");
-            //     td.innerHTML = arr[j];
-            //     tr.appendChild(td);
-            // }
-            console.log(1);
-            table.appendChild(tr);
-        }
-        parent.appendChild(table);
-    }
-
     //     С помощью функции range сделайте массив, заполненный числами от 1 до 25.
     //     С помощью функции createTable создайте таблицу, заполненную элементами из этого массива.
     //
@@ -1704,5 +1682,40 @@
     //
     //     Модифицируйте предыдущую задачу так, чтобы по клику на любую ячейку она активировалась - это значит
     //     становилась красного фона.
+    // var shaffeledArr = shuffle(range(1, 25));
+    //
+    // var parent = document.getElementById('parent');
+    // createTable(shaffeledArr, parent);
+    //
+    // function createTable(arr, parent) {
+    //
+    //     var table = document.createElement("table");
+    //
+    //
+    //     for (var i = 0; i < arr.length; i += 5) {
+    //         var tr = document.createElement("tr");
+    //         for (var j = i; j < i + 5; j++) {
+    //             var td = document.createElement("td");
+    //             td.innerHTML = arr[j];
+    //             td.addEventListener("click", function () {
+    //                 this.style.backgroundColor = 'red';
+    //             })
+    //             tr.appendChild(td);
+    //         }
+    //         //     console.log(1);
+    //         table.appendChild(tr);
+    //     }
+    //
+    //     parent.appendChild(table);
+    // }
+    //
+    // function range(min, max) {
+    //     var arr = [];
+    //     for (var i = min; i < max + 1; i++) {
+    //         arr.push(i);
+    //     }
+    //     return arr;
+    // }
+
 
 </script>
