--- a/lectures/index.html
+++ b/lectures/index.html
@@ -1785,7 +1785,7 @@
     }
     
     function initElement() {
-        elem.className = 'active';
+        this.className = 'active';
         this.removeEventListener("click", initElement);
     }
 
