--- a/lectures/index.html
+++ b/lectures/index.html
@@ -5,7 +5,10 @@
     <title>Title</title>
     <style>
         .active {
-            background-color: red;
+
+        }
+        .hide {
+            display: none;
         }
     </style>
 </head>
@@ -14,7 +17,14 @@
 <div id="parent"></div>
 
 <ul id="ul"></ul>
-<p id="paragraph"></p>
+
+
+<p id="1">1</p><button id="button1">hide 1</button>
+<p id="2">2</p><button id="button2">hide 2</button>
+<p id="3">3</p><button id="button3">hide 3</button>
+<p id="4">4</p><button id="button4">hide 4</button>
+<p id="5">5</p><button id="button5">hide 5</button>
+
 </body>
 </html>
 <script>
@@ -1731,93 +1741,167 @@
     //
     //     Модифицируйте предыдущую задачу так, чтобы, когда игрок выигрывает,
     //     таблица увеличивалась на 1 колонку и на 1 ряд.
+    //
+    //
+    // var parent = document.getElementById('parent');
+    // var p = document.getElementById('paragraph');
+    //
+    // initGame(1, parent, 3, 3);
+    //
+    // function initGame(min, parent, rawSize, time) {
+    //
+    //     var arr = range(min, rawSize * rawSize);
+    //
+    //     createTable(arr, shaffle(range(min, rawSize * rawSize)), parent, rawSize, time);
+    //     window.addEventListener("click", function setTimer() {
+    //         p.innerHTML = time;
+    //         window.timerID = window.setInterval(startTimer, 1000);
+    //         this.removeEventListener("click", setTimer);
+    //
+    //     });
+    //
+    //
+    // }
+    //
+    //
+    // function createTable(sourceArray, content, parent, rawSize, time) {
+    //     var table = document.createElement("table");
+    //
+    //     for (var i = 0; i < content.length; i += rawSize) {
+    //         var tr = document.createElement("tr");
+    //         for (var j = i; j < i + rawSize; j++) {
+    //             var td = document.createElement("td");
+    //             td.innerHTML = content[j];
+    //             td.addEventListener("click", function initElement() {
+    //
+    //
+    //                 if (this.innerHTML == sourceArray[0]) {
+    //                     this.className = 'active';
+    //                     this.removeEventListener("click", initElement);
+    //                     sourceArray.shift();
+    //
+    //                 }
+    //                 console.log(sourceArray)
+    //                 if (sourceArray.length == 0) {
+    //                     parent.firstChild.remove();
+    //                     window.clearInterval(window.timerID);
+    //                     initGame(1, parent, rawSize + 1, time + 30);
+    //                 }
+    //
+    //             });
+    //
+    //
+    //             tr.appendChild(td);
+    //         }
+    //
+    //         table.appendChild(tr);
+    //
+    //     }
+    //
+    //     parent.appendChild(table);
+    //
+    // }
+    //
+    //
+    // function shaffle(array) {
+    //
+    //     array.sort(function (a, b) {
+    //         return Math.random() - 0.5;
+    //     })
+    //
+    //     return array;
+    //
+    // }
+    //
+    // function range(min, max) {
+    //     var arr = [];
+    //     for (var i = min; i < max + 1; i++) {
+    //         arr.push(i);
+    //     }
+    //     return arr;
+    // }
+    //
+    // function startTimer() {
+    //     p.innerHTML = p.innerHTML - 1;
+    //     if (p.innerHTML < 1) {
+    //         window.clearInterval(window.timerID);
+    //         parent.firstChild.remove();
+    //         parent.innerHTML = 'GAME OVER!'
+    //     }
+    //
+    //
+    //
+    //
+    // }
+
+    // Лекция №9 по JavaScript. Классная работа
+
+    // Задачи
+
+    // Дан абзац и кнопка. Пусть по умолчанию этот абзац скрыт.
+    // Сделайте так, чтобы по нажатию на кнопку абзац показался на экране.
+    //
+
+    //     Модифицируйте предыдущую задачу так, чтобы по первому нажатию абзац показывался на экране,
+    //     а по второму - скрывался.
+    //
+    // var button = document.getElementById('button');
+    // var p = document.getElementById('paragraph');
+    //
+    // button.addEventListener("click", showParagraph);
+    //
+    // function showParagraph() {
+    //     p.className = 'active';
+    //     this.removeEventListener("click", showParagraph);
+    //     this.addEventListener("click", hideParagraph);
+    // }
+    //
+    // function hideParagraph() {
+    //     p.className = 'hide';
+    //     this.removeEventListener("click", hideParagraph)
+    //     this.addEventListener("click", showParagraph);
+    // }
+
+    //     Задачи
+
+    // Сделайте функцию hideElem, которая параметром будет принимать id элемента и скрывать этот элемент.
+    //
+    //     Даны абзацы. У каждого абзаца свой уникальный id. Даны также инпут и кнопка.
+    //     В инпут вводится id какого-либо абзаца и делается клик на кнопку.
+    //     С помощью функции hideElem из предыдущей задачи сделайте так, чтобы абзац с таким id исчез с экрана.
+    //
+    // var button = document.getElementById('button');
+    // var input = document.getElementById('input');
+    // button.addEventListener("click", hideElem);
+    //
+    // function hideElem() {
+    //     var id = document.getElementById(getID());
+    //     id.className = 'hide';
+    //
+    // }
+    // function getID() {
+    //     return input.value;
+    // }
+    //     Задачи
+    // Даны абзацы со своим уникальным id. К каждому абзацу привязана кнопка.
+    // По умолчанию абзацы видны на экране. Сделайте так, чтобы по нажатию на любую кнопку,
+    // скрывался привязанный к ней абзац.
+var buttons = document.querySelector('button');
+var buttons = document.querySelector('');
+    button.addEventListener("click", hideElem);
 
 
-    var parent = document.getElementById('parent');
-    var p = document.getElementById('paragraph');
+    function initTabs(paragraphs, buttons) {
+        for (var i = 0; i = )
 
-    initGame(1, parent, 5, 3);
+    }
 
-    function initGame(min, parent, rawSize, time) {
-
-        var arr = range(min, rawSize * rawSize);
-
-        createTable(arr, shaffle(range(min, rawSize * rawSize)), parent, rawSize);
-        window.addEventListener("click",function setTimer(){
-            p.innerHTML = time;
-            window.timerID = window.setInterval(timer, 1000);
-            this.removeEventListener("click", setTimer);
-
-        });
+    function hideElem() {
+        var id = document.getElementById(getID());
+        id.className = 'hide';
 
     }
 
 
-    function createTable(sourceArray, content, parent, rawSize) {
-        var table = document.createElement("table");
-
-        for (var i = 0; i < content.length; i += rawSize) {
-            var tr = document.createElement("tr");
-            for (var j = i; j < i + rawSize; j++) {
-                var td = document.createElement("td");
-                td.innerHTML = content[j];
-
-                td.addEventListener("click", function initElement() {
-
-
-                    if (this.innerHTML == sourceArray[0]) {
-                        this.className = 'active';
-                        this.removeEventListener("click", initElement);
-                        sourceArray.shift();
-
-                    }
-                    if (sourceArray.length == 0) {
-                        parent.firstChild.remove();
-                        initGame(1, parent, rawSize + 1, time+30);
-                    }
-
-                });
-
-                tr.appendChild(td);
-            }
-
-            table.appendChild(tr);
-
-        }
-
-        parent.appendChild(table);
-
-    }
-
-
-    function shaffle(array) {
-
-        array.sort(function (a, b) {
-            return Math.random() - 0.5;
-        })
-
-        return array;
-
-    }
-
-    function range(min, max) {
-        var arr = [];
-        for (var i = min; i < max + 1; i++) {
-            arr.push(i);
-        }
-        return arr;
-    }
-
-    function timer() {
-        p.innerHTML = p.innerHTML - 1;
-        if (p.innerHTML < 1) {
-            window.clearInterval(window.timerID)
-        }
-        if (p.innerHTML < 1){
-            parent.firstChild.remove();
-            parent.innerHTML = 'GAME OVER!'
-        }
-
-    }
 
 </script>
